[package]
name = "w3ns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
serde = "1.0.116"
serde_bytes = "0.11.5"
ic-kit = "0.4.8"
uuid = "1.1.2"